# RL

./: README.md
2048_expectimax/: 2048.cpp  agent.h  statistic.h  train.sh
DLP_2048/: Makefile  README.md
TCG_2048/: 2048.cpp  agent.h  board.h  train.sh
hollow_nogo_MCTS/: agent.h  board.h  nogo  run-gogui-twogtp.sh  usage.txt
hollow_nogo_MCTS/gogui-twogtp-20220219233147/: P2B_P1W.txt
hollow_nogo_MCTS_RAVE/: agent.h
hollow_nogo_MCTS_v2/: agent.h  nogo  run-gogui-twogtp.sh
hollow_nogo_MCTS_v2_with_alpha/: CMakeLists.txt  agent.h  nogo.cpp  run-gogui-twogtp.sh  stateTorch.h
hollow_nogo_Parallel_MCTS/: agent.h  makefile  nogo  run-gogui-twogtp.sh
hollow_nogo_Parallel_MCTS_v2/: agent.h  clean.sh  nogo  run-gogui-twogtp.sh
my_2048/: 2048.cpp
